--- a/Useful-SQL-queries.mediawiki
+++ b/Useful-SQL-queries.mediawiki
@@ -62,7 +62,7 @@ Byte 2 - Vision of Abyssea to Seekers of Adoulin
 It's a decimal representation of multiple bytes. Lets look at them in binary, where it's all on/off (one and zero):<br>
 so our default value of 4094 = 0000111111111110 (everything except the "Not Used" bits). You can use almost any calculator to swap between these formats if you need to.
 
-== Enable ZONEMISC features everywehre ==
+== Enable ZONEMISC features everywhere ==
 In this example, we'll enable `MISC_YELL` everywhere.
 ```cpp
 MISC_YELL = 0x0400, // Send and receive /yell commands
