--- a/Post-Install-Guide.mediawiki
+++ b/Post-Install-Guide.mediawiki
@@ -23,7 +23,7 @@ UPDATE zone_settings SET zoneip = 'IP';
 Replace <code>IP</code> with the desired IP. To access the game only on the same machine, this should be <code>127.0.0.1</code>. If you're accessing the server from another machine on the network, it should be the local IP address of the host, e.g. <code>192.168.0.11</code>. If you want to access it over the internet, it needs to be your public IP which can be gathered from various websites such as https://www.whatismyip.com/.
 
 == Database Management ==
-By default, dbtool will backup your whole database into <code>topaz/sql/backups/</code> whenever it performs an update. You can turn this off and do manual backups either with the TUI, or by running <code>python3 dbtool.py backup</code>. You can create a backup of only sensitive player data by using <code>python3 dbtool.py backup lite</code>. The tables it backs up with the <code>lite</code> argument are defined in <code>topaz/tools/config.yaml</code>. The backups can be imported using the <b>Restore/Import</b> command in dbtool.
+By default, dbtool will backup your whole database into <code>topaz/sql/backups/</code> whenever it performs an update. You can turn this off and do manual backups either with the TUI, or by running <code>python3 dbtool.py backup</code> (Windows: <code>py -3 dbtool.py backup</code>). You can create a backup of only sensitive player data by using <code>python3 dbtool.py backup lite</code> (Windows: <code>py -3 dbtool.py backup lite</code>). The tables it backs up with the <code>lite</code> argument are defined in <code>topaz/tools/config.yaml</code>. The backups can be imported using the <b>Restore/Import</b> command in dbtool.
 
 == Auto-Starting the Server ==
 Linux users can create several systemd services to automate the servers (make sure to update <code>/path/to/topaz</code>, and the User/Group):
@@ -123,7 +123,7 @@ ExecStart=/path/to/topaz/topaz_search
 [Install]
 WantedBy=topaz.service
 ```
-After adding these the <code>/etc/systemd/system/</code>, run <code>systemctl daemon-reload</code> followed by <code>systemctl enable topaz_game topaz_connect topaz_search</code>. You can start/stop all the servers at once with <code>systemctl start/stop topaz</code> or each individual service separately. To enable auto-start, type <code>systemctl enable topaz</code>. Make sure topaz is in a location accessible to the user that will be running the service, and the correct permissions are set.
+After adding these to <code>/etc/systemd/system/</code>, run <code>systemctl daemon-reload</code> followed by <code>systemctl enable topaz_game topaz_connect topaz_search</code>. You can start/stop all the servers at once with <code>systemctl start/stop topaz</code> or each individual service separately. To enable auto-start, type <code>systemctl enable topaz</code>. Make sure topaz is in a location accessible to the user that will be running the service, and the correct permissions are set.
 
 == See Also ==
 [https://github.com/topaz-next/topaz/wiki/Useful-SQL-queries Useful SQL Queries]
