--- a/Miscellaneous-(Server).mediawiki
+++ b/Miscellaneous-(Server).mediawiki
@@ -5,7 +5,7 @@ One possible fix: Execute HeidiSQL > select your session and connect to it > sel
 === Version Mismatch ===
 <b>WE STRONGLY ADVISE AGAINST LOCKING THE SERVER TO OLDER VERSIONS. IT IS A UNIVERSALLY BAD IDEA.</b> It <em>will</em> cause issues even <em>if</em> you manage to keep both server and client versions on par!
 
-If the server (Topaz Next) and the client (Final Fantasy XI) don't share the same version, you'll probably get this error in the topaz_connect.exe log window:
+If the server (LandSandBoat) and the client (Final Fantasy XI) don't share the same version, you'll probably get this error in the topaz_connect.exe log window:
 ```
 [Error] lobbyview_parse: Incorrect client version: got 000000xx_x, expected 000000xx_x
 [Error] lobbyview_parse: The server must be updated to support this client version
