Updated Useful SQL queries (mediawiki)

--- a/Useful-SQL-queries.mediawiki
+++ b/Useful-SQL-queries.mediawiki
@@ -72,3 +72,30 @@ SET
 WHERE
     NOT(misc & 1024);
 ```
+
+== Show contents of players' bazaars ==
+
+```sql
+SELECT
+    c.charname,
+    ci.quantity,
+    ci.bazaar,
+    COALESCE(ite.`name`, itb.`name`, itf.`name`, itp.`name`, itw.`name`) AS itemname,
+    z.`name` AS "last_seen_zone",
+    acc_sess.accid IS NOT NULL AS "currently_online"
+FROM char_inventory AS ci
+LEFT JOIN item_equipment AS ite ON ci.itemid = ite.itemid
+LEFT JOIN item_basic AS itb ON ci.itemid = itb.itemid
+LEFT JOIN item_furnishing AS itf ON ci.itemid = itf.itemid
+LEFT JOIN item_puppet AS itp ON ci.itemid = itp.itemid
+LEFT JOIN item_weapon AS itw ON ci.itemid = itw.itemid
+LEFT JOIN chars AS c on c.charid = ci.charid
+LEFT JOIN zone_settings AS z on c.pos_zone = z.zoneid
+LEFT JOIN accounts_sessions AS acc_sess on c.accid = acc_sess.accid
+WHERE ci.bazaar > 0;
+```
+
+```
+Testo	1	100	adventurer_coupon	Southern_San_dOria	1
+Testo	1	99999999	kraken_club	Southern_San_dOria	1
+```
